--- a/zuul-gateway-dev.properties
+++ b/zuul-gateway-dev.properties
@@ -1,2 +1,17 @@
-demo-api.prop1=value1
-demo-api.version=1.0
+zuul.host.connect-timeout-millis=1
+
+zuul.routes.demo-api-a.path=/demo-api-a/**
+zuul.routes.demo-api-a.url=http://localhost:9011
+
+zuul.routes.demo-api-a-ribbon.path=/demo-api-a-ribbon/**
+zuul.routes.demo-api-a-ribbon.serviceId=demo-api-a-ribbon
+demo-api-a-ribbon.ribbon.listOfServers=localhost:9011
+demo-api-a-ribbon.ribbon.ConnectTimeout=1
+
+zuul.routes.demo-api-b.path=/demo-api-b/**
+zuul.routes.demo-api-b.url=http://localhost:9021
+
+zuul.routes.demo-api-b-ribbon.path=/demo-api-b-ribbon/**
+zuul.routes.demo-api-b-ribbon.serviceId=demo-api-b-ribbon
+demo-api-b-ribbon.ribbon.listOfServers=localhost:9021
+demo-api-b-ribbon.ribbon.ConnectTimeout=1
